# helix-db

./: .gitattributes  .gitignore  .npmrc  CONTRIBUTING.md  Cargo.toml  ImplementationPlan.md  LICENSE  README.md  Specifications.md  Study.md  THIRD_PARTY_NOTICES.md  biome.json  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml  rustfmt.toml  tsconfig.base.json  tsconfig.browser-smoke.json  tsconfig.integration.json  tsconfig.json  tsconfig.tools.json  vite.config.ts  vitest.config.ts  vitest.integration.config.ts
.github/: CODEOWNERS  README.md
.github/ci/: matrix.json  npm-license-inventory.json  rust-license-inventory.json  wasm-tools.json
.github/workflows/: benchmark-baseline.yml  ci-nightly.yml  ci.yml
benchmarks/: README.md  benchmark-contract.mjs  check-benchmark-artifacts.mjs  check-hdoc-decisions.mjs  check-hdoc.mjs  hdoc-contract.mjs  run-baseline.mjs  run-hdoc.mjs  run-host-boundary.mjs
benchmarks/cpu-columnar/: README.md
benchmarks/datasets/: README.md
benchmarks/reports/: README.md  hdoc-v1-decisions.json  hdoc-v1-experiments.md  host-boundary-2026-07-12.json
benchmarks/schema/: README.md  hdoc-decisions-v1.schema.json  hdoc-raw-v1.schema.json  hdoc-summary-v1.schema.json  raw-result-v1.schema.json  summary-v1.schema.json  workload-v1.schema.json
benchmarks/webgpu/: README.md
benchmarks/workloads/: README.md  harness-calibration-v1.json  hdoc-v1.json
compatibility/v1/: README.md  check-matrix.mjs  generate-matrix.mjs  matrix-v1.json
conformance/: README.md
conformance/compatibility/: README.md
conformance/formats/: README.md
conformance/host/: README.md  abi-v7-explicit-copy.vectors
conformance/semantics/: README.md
crates/: README.md
crates/helix-columnar/: Cargo.toml
crates/helix-columnar/src/: lib.rs
crates/helix-core/: Cargo.toml
crates/helix-core/examples/: host_boundary_benchmark.rs
crates/helix-core/src/: deterministic.rs  deterministic_inputs.rs  explicit_copy.rs  lib.rs  transport_alternatives.rs
crates/helix-doc/: Cargo.toml
crates/helix-doc/examples/: hdoc_v1_benchmark.rs  hdoc_v1_golden.rs  hdoc_v1_oracle.rs
crates/helix-doc/src/: hdoc_negotiation.rs  lib.rs  path_dictionary.rs  path_dictionary_state.rs  property_tests.rs  tagged_json.rs
crates/helix-gpu/: Cargo.toml
crates/helix-gpu/src/: lib.rs
crates/helix-host-mock/: Cargo.toml  README.md
crates/helix-host-mock/src/: lib.rs
crates/helix-host-native/: Cargo.toml
crates/helix-host-native/src/: lib.rs
crates/helix-query/: Cargo.toml
crates/helix-query/src/: lib.rs
crates/helix-server/: Cargo.toml
crates/helix-server/src/: lib.rs
crates/helix-storage/: Cargo.toml
differential/mongodb/: README.md  cases-v1.json  check-artifacts.mjs  ejson.mjs  mongosh-runner.js  report-v1.json  run.mjs  upstream-observations-v1.json
docs/: README.md  chatgpt-database-system-with-webgpu-transcript.md
docs/adr/: 0000-template.md  0001-public-product-identity.md  0002-exact-numeric-semantics.md  0003-utc-microseconds-and-injected-clocks.md  0004-preserve-utf8-and-use-binary-collation.md  0005-explicit-array-matching.md  0006-default-to-uuidv7-identifiers.md  0007-exact-vector-results-with-cpu-reranking.md  0008-use-one-portable-v1-limit-profile.md  0009-use-versioned-error-codes-and-outcomes.md  0010-use-id-order-as-the-native-default.md  0011-use-tagged-json-semantic-fixtures.md  0012-use-bounded-little-endian-hdoc-v1.md  0013-use-versioned-wit-component-abi.md  README.md
docs/architecture/: aggregation-semantics.md  array-semantics.md  async-completion-contract-v1.json  async-completion-contract-v1.md  async-storage-batch-abi-v1.json  async-storage-batch-abi-v1.md  browser-host-skeleton-v1.json  browser-host-skeleton-v1.md  buffer-transport-alternatives-v1.json  buffer-transport-alternatives-v1.md  build-profiles.md  code-quality-and-dependency-policy.md  continuous-integration.md  crud-query-semantics.md  default-ordering-semantics.md  dependency-security-reporting.md  deterministic-core-boundary-v1.json  deterministic-core-boundary-v1.md  deterministic-injection-contract-v1.json  deterministic-injection-contract-v1.md  error-semantics.md  explicit-copy-buffer-transport-v1.json  explicit-copy-buffer-transport-v1.md  floating-special-semantics.md  host-abi-conformance-v1.json  host-abi-conformance-v1.md  host-boundary-benchmark-v1.json  host-boundary-benchmark-v1.md  host-boundary-tracing-v1.json  host-boundary-tracing-v1.md  host-capability-abi-v1.json  host-capability-abi-v1.md  host-capability-isolation-v1.json  host-capability-isolation-v1.md  host-transport-selection-v1.json  host-transport-selection-v1.md  identifier-semantics.md  javascript-toolchain-policy.md  limits-v1.md  missing-null-semantics.md  (+21 more)
docs/compatibility/: mongodb-initial-differential.md  v1-semantic-compatibility-matrix.md
docs/development/: bootstrap.json  bootstrap.md
docs/formats/: README.md  hdoc-v1-compatibility.json  hdoc-v1-compatibility.md  hdoc-v1-compression.json  hdoc-v1-compression.md  hdoc-v1-envelope.json  hdoc-v1-integrity.json  hdoc-v1-integrity.md  hdoc-v1-payloads.json  hdoc-v1-payloads.md  hdoc-v1-records.json  hdoc-v1-records.md  hdoc-v1-tagged-json.md  hdoc-v1-type-tags.json  hdoc-v1-type-tags.md  hdoc-v1.md  path-dictionary-v1.json  path-dictionary-v1.md
docs/governance/: change-control.md  decision-owners.md  licensing.md  ownership.md  requirements.md  scope.md  severity.md  terminology.md  versioning.md
docs/quality/: artifact-retention.md  benchmark-results.md  code-coverage-policy.md  deterministic-fixture-generation.md  semantic-fixture-format.md  test-command-surface.md
docs/templates/: compatibility-claim.md  (+2 more)
evidence/: README.md
examples/: README.md  examples.json
examples/native-toolchain/: Cargo.toml  README.md
examples/native-toolchain/src/: main.rs
fixtures/: README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: hdoc_decode.rs  hdoc_encode.rs  hdoc_migration.rs  hdoc_path_lookup.rs  hdoc_tagged_render.rs
shaders/: README.md
tests/: README.md  run-suite.mjs  suites.json
wit/: README.md
(+511 files in other folders)
