[workspace]
members = [
    "crates/helix-columnar",
    "crates/helix-core",
    "crates/helix-doc",
    "crates/helix-gpu",
    "crates/helix-host-native",
    "crates/helix-query",
    "crates/helix-server",
    "crates/helix-storage",
]
exclude = ["target/toolchain"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.96.1"
license = "MIT"
repository = "https://github.com/alextis59/helix-db"
publish = false

[workspace.dependencies]
blake3 = { version = "=1.8.5", default-features = false, features = ["pure"] }
crc = { version = "=3.4.0", default-features = false }
helix-columnar = { path = "crates/helix-columnar" }
helix-core = { path = "crates/helix-core" }
helix-doc = { path = "crates/helix-doc" }
helix-gpu = { path = "crates/helix-gpu" }
helix-host-native = { path = "crates/helix-host-native" }
helix-query = { path = "crates/helix-query" }
helix-storage = { path = "crates/helix-storage" }
lz4_flex = { version = "=0.13.1", default-features = false, features = ["safe-decode", "safe-encode"] }

[workspace.lints.rust]
warnings = { level = "deny", priority = -3 }
future_incompatible = { level = "deny", priority = -2 }
rust_2024_compatibility = { level = "deny", priority = -2 }
unsafe_code = "forbid"
missing_docs = "deny"
unreachable_pub = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -3 }
pedantic = { level = "deny", priority = -2 }
allow_attributes_without_reason = "deny"
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

[workspace.metadata.helix]
plan-item = "P03-012"
status = "hdoc-tagged-json"
database-functionality = true
public-release = false
rust-toolchain = "1.96.1"
msrv = "1.96.1"
browser-wasm-target = "wasm32-unknown-unknown"
component-wasm-target = "wasm32-wasip2"
server-edge-wasm-target = "wasm32-wasip3"
server-edge-wasm-status = "selected-unavailable-tier3"
build-profile-contract = "P02-005"
build-profiles = ["dev", "release", "wasm", "browser", "sanitizer", "coverage", "bench"]
test-command-contract = "P02-007"
test-commands = ["unit", "integration", "conformance", "fuzz", "browser", "crash", "benchmark", "distributed"]
fixture-generation-contract = "P02-008"
fixture-registry = "fixtures/generation/registry-v1.json"
ci-matrix-contract = "P02-009"
ci-matrix = ".github/ci/matrix.json"
wasm-smoke-contract = "P02-010"
component-validator = ".github/ci/wasm-tools.json"
toolchain-examples-contract = "P02-016"
native-toolchain-example = "examples/native-toolchain/Cargo.toml"
browser-smoke-root = "examples/browser-toolchain"
clean-bootstrap-contract = "P02-017"
clean-bootstrap-authority = "docs/development/bootstrap.json"
public-name-decision = "P16-016"
sanitizer-target = "x86_64-unknown-linux-gnuasan"
coverage-rustflags = "-C instrument-coverage"
coverage-report-contract = "P02-013"
coverage-policy = "tests/toolchain/rust-coverage-policy.json"
browser-js-target = "es2022"

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
strip = "none"

[profile.test]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256
strip = "none"

[profile.release]
opt-level = 3
debug = 1
debug-assertions = false
overflow-checks = true
lto = "thin"
panic = "unwind"
incremental = false
codegen-units = 1
strip = "none"

[profile.wasm]
inherits = "release"
opt-level = "s"
debug = 1
lto = "fat"
panic = "abort"
codegen-units = 1
strip = "symbols"

[profile.browser]
inherits = "release"
opt-level = "z"
debug = 1
lto = "fat"
panic = "abort"
codegen-units = 1
strip = "symbols"

[profile.sanitizer]
inherits = "dev"
opt-level = 1
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
incremental = false
codegen-units = 1
strip = "none"

[profile.coverage]
inherits = "dev"
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
incremental = false
codegen-units = 1
strip = "none"

[profile.bench]
opt-level = 3
debug = 1
debug-assertions = false
overflow-checks = true
lto = "thin"
incremental = false
codegen-units = 1
strip = "none"
