[package]
name = "helix-columnar"
description = "Boundary skeleton for rebuildable HelixDB columnar sidecars and CPU operators"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[package.metadata.helix]
status = "boundary-skeleton"
database-functionality = false

[dependencies]
helix-doc.workspace = true
helix-query.workspace = true
