[package]
name = "helix-core"
description = "Portable deterministic HelixDB orchestration and versioned component ABI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[package.metadata.helix]
status = "async-completion-contract-v1"
database-functionality = false

[dependencies]
helix-columnar.workspace = true
helix-doc.workspace = true
helix-query.workspace = true
helix-storage.workspace = true
