[package]
name = "helix-doc"
description = "Portable deterministic HDoc encoding, validation, lookup, and lossless tagged JSON conversion for HelixDB"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[package.metadata.helix]
status = "hdoc-tagged-json"
database-functionality = true

[dependencies]
blake3.workspace = true
crc.workspace = true
lz4_flex.workspace = true
