[package]
name = "helix-doc"
description = "Portable deterministic HDoc and collection path-dictionary semantics for HelixDB"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[package.metadata.helix]
status = "hdoc-golden-v1"
database-functionality = true

[dependencies]
blake3.workspace = true
crc.workspace = true
lz4_flex.workspace = true
