[package]
name = "helix-host-native"
description = "Wasmtime native host skeleton with deny-by-default capability grants"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[package.metadata.helix]
status = "wasmtime-host-skeleton-v1"
database-functionality = false

[features]
default = []
gpu = ["dep:helix-gpu"]

[dependencies]
helix-core.workspace = true
helix-gpu = { workspace = true, optional = true }
wasmtime.workspace = true
