[package]
name = "helix-query"
description = "Boundary skeleton for HelixDB query syntax, normalization, and CPU reference semantics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[package.metadata.helix]
status = "boundary-skeleton"
database-functionality = false

[dependencies]
helix-doc.workspace = true
