[package]
name = "helix-server"
description = "Boundary skeleton for the native HelixDB server process and API lifecycle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[package.metadata.helix]
status = "boundary-skeleton"
database-functionality = false

[features]
default = []
gpu = ["helix-host-native/gpu"]

[dependencies]
helix-host-native.workspace = true
